# makepad-diagram-kit

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
docs/: ROADMAP.md
docs/superpowers/plans/: 2026-04-23-m-diagram-next-phases.md  2026-04-23-streaming-markdown-diagram-block.md
examples/: gallery.rs  polish_demo.rs
specs/: m-diagram-v1.spec.md
src/: errors.rs  layout.rs  lib.rs  makepad_render.rs  primitive.rs  streaming.rs  theme.rs  widget.rs
src/types/: architecture.rs  er.rs  eyebrow.rs  flowchart.rs  layers.rs  mod.rs  nested.rs  pyramid.rs  quadrant.rs  sequence.rs  shared.rs  state.rs  swimlane.rs  timeline.rs  tree.rs  venn.rs
tests/: corpus.rs  expanded_types_dispatch.rs  makepad_render_contract.rs  sequence_dispatch.rs
tests/fixtures/architecture/: littlemight.json  vertical.json
tests/fixtures/er/: shop.json
tests/fixtures/flowchart/: auth.json  diamond_only.json  linear.json
tests/fixtures/layers/: mini.json  osi.json  webstack.json
tests/fixtures/nested/: scope.json
tests/fixtures/pyramid/: content.json  maslow.json  mission.json
tests/fixtures/quadrant/: center.json  impact_effort.json  portfolio.json
tests/fixtures/sequence/: basic.json
tests/fixtures/state/: order.json
tests/fixtures/swimlane/: release.json
tests/fixtures/timeline/: release.json
tests/fixtures/tree/: deep.json  product.json  single.json
tests/fixtures/venn/: product.json
