[package]
name = "makepad-diagram-kit"
version = "0.1.0"
edition = "2024"
description = "Streaming-renderable editorial diagrams for Makepad 2.0 apps. JSON-spec input, Makepad-native vector output. 6 types: pyramid, quadrant, tree, layers, flowchart, architecture."
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
# JSON spec parser. micro-serde keeps binary size small and plays nice with
# Makepad's no-alloc paths if we ever target embedded.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

# Makepad widget binding — feature-gated so pure-parsing consumers (CLI
# validators, alternative renderers) don't pull in the full Makepad stack.
# Path dep rather than a git/crates.io pin: our fork's `dev` branch ships
# the aichat pieces this kit integrates with, and we want lock-step
# development without round-tripping through a published release.
makepad-widgets = { path = "../robius/makepad/widgets", optional = true }

[dev-dependencies]
# For spec snapshot testing via literal JSON round-trips.
pretty_assertions = "1"

[features]
default = []
# Opt-in: renderer binding for Makepad widgets. Activates `makepad_render`
# + the `DiagramView` widget; leaves parse/layout untouched.
makepad = ["dep:makepad-widgets"]

[lib]
path = "src/lib.rs"

[lints.clippy]
all = "warn"
